# AmharicDictionary

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
static/js/: index.js
templates/: home.html
