[project]
name = "amharicdictionary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.7.0",
    "click==8.1.7",
    "flask==3.0.2",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "werkzeug==3.0.1",
    "wtforms==3.1.2",
]
